[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/PixelInterface/Style/Stone.tres" type="StyleBox" id=1]
[ext_resource path="res://main/party.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/pause_menu/pause_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/PixelInterface/Theme.tres" type="Theme" id=4]
[ext_resource path="res://addons/dialog_boxes/dialog_box.gd" type="Script" id=5]
[ext_resource path="res://ui/pause_menu/menu_popup.gd" type="Script" id=6]
[ext_resource path="res://main/local_scene.gd" type="Script" id=7]
[ext_resource path="res://ui/saves_menu/saves_popup.tscn" type="PackedScene" id=8]
[ext_resource path="res://main/player_proxy.tscn" type="PackedScene" id=9]

[node name="LocalScene" type="Node" groups=[
"save",
]]
script = ExtResource( 7 )

[node name="World" type="YSort" parent="."]

[node name="PlayerProxy" parent="World" groups=[
"save",
] instance=ExtResource( 9 )]
position = Vector2( 0, 0 )

[node name="Camera2D" type="Camera2D" parent="World/PlayerProxy"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="SimpleDialogBox" type="CanvasLayer" parent="."]
script = ExtResource( 5 )
transition_time_ms = 200.0
text_speed = 30.0
height_percent = 0.3
margin = 5
bbcode_enabled = true
theme = ExtResource( 4 )
panel_stylebox = ExtResource( 1 )

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="MenuPopup" type="PopupPanel" parent="MenuLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -120.0
margin_right = 160.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="MenuLayer/MenuPopup" instance=ExtResource( 3 )]
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="SavesPopup" parent="MenuLayer" instance=ExtResource( 8 )]
current_mode = 0

[node name="Party" parent="." instance=ExtResource( 2 )]
[connection signal="about_to_show" from="MenuLayer/MenuPopup" to="." method="_on_menu_about_to_show"]
[connection signal="popup_hide" from="MenuLayer/MenuPopup" to="." method="_on_menu_popup_hide"]
[connection signal="about_to_show" from="MenuLayer/SavesPopup" to="." method="_on_menu_about_to_show"]
[connection signal="popup_hide" from="MenuLayer/SavesPopup" to="." method="_on_menu_popup_hide"]
